--- a/app/src/main/res/layout/calc_wb.xml
+++ b/app/src/main/res/layout/calc_wb.xml
@@ -75,9 +75,7 @@
 
                         <NumberPicker
                             android:id="@+id/apc_wb_time_pick_h"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:divider="?attr/primaryColor"
+                            style="@style/NumberPickerStyle"
                             />
 
                         <TextView
@@ -89,9 +87,7 @@
 
                         <NumberPicker
                             android:id="@+id/ap_wb_time_pick_min"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:divider="?attr/primaryColor"
+                            style="@style/NumberPickerStyle"
                             />
 
                         <TextView
