--- a/app/src/main/res/layout/calc_mass.xml
+++ b/app/src/main/res/layout/calc_mass.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="horizontal"
-              android:weightSum="1"
-              android:paddingTop="@dimen/tab_padding"
-              android:paddingBottom="@dimen/tab_padding">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        style="@style/CalculatorLinearLayout">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -63,4 +62,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</LinearLayout></ScrollView>
