--- a/app/src/main/res/layout/calc_time.xml
+++ b/app/src/main/res/layout/calc_time.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:weightSum="1"
-    android:paddingTop="@dimen/tab_padding"
-    android:paddingBottom="@dimen/tab_padding">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        style="@style/CalculatorLinearLayout">
 
     <RadioGroup
         android:id="@+id/calc_func_time_radio"
@@ -159,4 +157,4 @@
 
 
 
-</LinearLayout>
+</LinearLayout></ScrollView>
